# face_recognition

./: CMakeLists.txt  README.md  face_recognition.py  package.xml  requirements.txt
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
face_recognitions/: CMakeLists.txt  package.xml
face_recognitions/face_recognitions/: knn.py
face_recognitions/image/Jarunyawat/: 0.npy  1.npy  11.npy  13.npy  14.npy  15.npy  16.npy  18.npy  23.npy  24.npy  27.npy  29.npy  33.npy  35.npy  38.npy  42.npy  43.npy  45.npy  48.npy  49.npy  6.npy  8.npy
face_recognitions/launch/: face_recognition.launch.py  people_detection.launch.py
face_recognitions/scripts/: base_controller.py  camera_script.py  display_script.py  face_recog_script.py  face_recognition_backend.py  face_recognition_script.py  inverse_kinematics.py  people_detect_rootfile.py  people_detection_behavior.py  people_detection_scripts.py  people_pos_rel_odom_scripts.py  turtle_follower.py
face_recognitions_interface/: CMakeLists.txt  package.xml
face_recognitions_interface/action/: Recognition.action
face_recognitions_interface/msg/: Roibox.msg
face_recognitions_interface/srv/: SetEnb.srv
face_regonitions/: get_datatset.py  webcam.py
image/Jarunyawat/: 10.npy  12.npy  17.npy  19.npy  2.npy  20.npy  21.npy  22.npy  25.npy  26.npy  28.npy  3.npy  30.npy  31.npy  32.npy  34.npy  36.npy  37.npy  39.npy  4.npy  40.npy  41.npy  44.npy  46.npy  47.npy  5.npy  7.npy  9.npy
nav2_simple_commander/: setup.py
sam_bot_description/: CMakeLists.txt  package.xml
sam_bot_description/description/: base.xacro  cacao.xacro  castor.xacro  controller.xacro  sam_bot_description.urdf  sensors.xacro  wheel.xacro
sam_bot_description/launch/: bringup_launch.py  cacao_simulation_launch.py  display.launch.py  localization_launch.py  navigation_launch.py  rviz_launch.py  slam_launch.py
sam_bot_description/mesh/: MockUp.STL  mockup configurations.txt
sam_bot_description/rviz/: urdf_config.rviz
sam_bot_description/world/: house_simulation.sdf
scripts/: display_script.py
